# DeltaLoop

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_GENZ.md  pyproject.toml  requirements.txt  setup.py
data/: test_eval_results.json  test_synthetic_logs.jsonl
data/customer_support/: interactions.jsonl  interactions_test.jsonl  interactions_train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_150500/: train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_150905/: results.json
data/customer_support/pipeline_runs/support_agent_20251107_150905/adapter/: training_config.json
data/customer_support/pipeline_runs/support_agent_20251107_171218_sft/: results.json  train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_171218_sft/adapter/: training_config.json
data/customer_support/pipeline_runs/support_agent_20251107_173657_dpo/: train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_173857_dpo/: results.json  train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_173857_dpo/adapter/: README.md  adapter_config.json  training_config.json
data/customer_support/pipeline_runs/support_agent_20251107_175559_sft/: train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_190131_sft/: results.json  train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_190356_sft/: custom_eval_results.json  results.json  train.jsonl
data/customer_support/pipeline_runs/support_agent_20251107_192527_dpo/: custom_eval_results.json  results.json  train.jsonl
data/demo_logs/: synthetic_traces.jsonl
data/demo_test/: synthetic_traces.jsonl  train.jsonl
data/models/: example_config.json
deltaloop/: __init__.py  cli.py  distill.py  eval.py  pipeline.py  schema.py  train.py  utils.py
deltaloop/adapters/: __init__.py  generic.py  langchain.py
deltaloop/backends/: __init__.py  dpo_backend.py  transformers_backend.py  unsloth_backend.py
docs/: _config.yml  index.html  script.js  style.css
examples/: README.md  customer_support_agent.py
(+15 files in other folders)
